Major over haul (again).
- Since I am not using something like React I have added tamplates so I don't need to worry about updating things like the navigation in multiple places.
- I have also reworked some of the API so it is shorter and a bit more read able.
- Material Lite has been removed and I have added some styling with flex box.

Here's to hoping these commits will contain slightly less and wil be more to the point.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/amuhs/key_log#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "nedb": "^1.8.0"
+    "jsonschema": "^1.2.6",
+    "nedb": "^1.8.0",
+    "nunjucks": "^3.2.2"
   }
 }
